# InstructionAnalyzer

./: .gitignore  Cargo.toml
src/: main.rs
src/analysis/: collect.rs  executable.rs  patterns.rs  types.rs
src/analysis/utils/: count.rs  format.rs  print.rs
