[package]
name = "InstructionExtensionAnalyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
regex = "1.11.1"
terminal_size = "0.4.2"
memmap2 = "0.9"
bytecount = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
colored = "3.0.0"
atty = "0.2.14"
strip-ansi-escapes = "0.2.1"
glob = "0.3"
chrono = "0.4"

# Enable LTO and codegen-units=1 for max performance
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
